--- a/views/index.html
+++ b/views/index.html
@@ -12,19 +12,17 @@
         <div class="container">
             <div class="row">
                 <div class="form_bg">
-                    <form>
+                    <form action="/login" method="post">
                         <h2 class="text-center">Login Page</h2>
                         <br/>
                         <div class="form-group">
-                            <input type="email" class="form-control" id="userid" placeholder="User id">
+                            <input type="text" class="form-control" name="userId" placeholder="User id">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="pwd" placeholder="Password">
-
+                            <input type="password" class="form-control" name="password" placeholder="Password">
                         </div>
-                        <br/>
                         <div class="align-center">
-                            <button type="submit" class="btn btn-default" id="login">Login</button>
+                            <button type="submit" class="btn btn-default" id="submit">Login</button>
                         </div>
                         <div class="align-left">
                             <a href="/register">Register Here.</a>
